Fix overflow of text in navigation links

--- a/app/assets/stylesheets/frontend/views/_corporate-information-pages-worldwide-organisation.scss
+++ b/app/assets/stylesheets/frontend/views/_corporate-information-pages-worldwide-organisation.scss
@@ -10,6 +10,7 @@
     li {
       list-style: none;
       margin-left: 1.2em;
+      word-wrap: break-word;
 
       &:before {
         content: "-";
